--- a/package.yaml
+++ b/package.yaml
@@ -19,8 +19,26 @@ extra-source-files:
 # common to point users to the README.md file.
 description:         Please see the README on GitHub at <https://github.com/githubuser/memory-optics#readme>
 
+language: GHC2021
+
+default-extensions:
+- TemplateHaskell
+- QuasiQuotes
+- LambdaCase
+- BlockArguments
+- GADTs
+- DataKinds
+- TypeFamilies
+- GHCForeignImportPrim
+- UnliftedFFITypes
+- UnboxedTuples
+
 dependencies:
 - base >= 4.7 && < 5
+- lens
+- polysemy
+- polysemy-plugin
+- type-level-numbers
 
 ghc-options:
 - -Wall
@@ -32,6 +50,13 @@ ghc-options:
 - -Wmissing-home-modules
 - -Wpartial-fields
 - -Wredundant-constraints
+- -fplugin=Polysemy.Plugin
+
+custom-setup:
+  dependencies:
+    - base
+    - Cabal
+    - Cabal-syntax
 
 library:
   source-dirs: src
