--- a/memory-optics.cabal
+++ b/memory-optics.cabal
@@ -31,6 +31,7 @@ custom-setup
 
 library
   exposed-modules:
+      Control.Lens.Monadic
       Control.Monad.RightModule
       Data.Memory
       Data.Memory.Scalars
