--- a/memory-optics.cabal
+++ b/memory-optics.cabal
@@ -7,11 +7,11 @@ cabal-version: 2.2
 name:           memory-optics
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/memory-optics#readme>
-homepage:       https://github.com/githubuser/memory-optics#readme
-bug-reports:    https://github.com/githubuser/memory-optics/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2024 Author name here
+homepage:       https://github.com/ddddanil/memory-optics#readme
+bug-reports:    https://github.com/ddddanil/memory-optics/issues
+author:         Danil Doroshin
+maintainer:     ddddanil5555@gmail.com
+copyright:      2024 Danil Doroshin
 license:        BSD-3-Clause
 license-file:   LICENSE
 build-type:     Custom
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/memory-optics
+  location: https://github.com/ddddanil/memory-optics
 
 custom-setup
   setup-depends:
@@ -63,6 +63,7 @@ library
   build-depends:
       base >=4.7 && <5
     , lens
+    , mmorph
     , polysemy
     , polysemy-plugin
     , type-level-numbers
@@ -97,7 +98,9 @@ test-suite memory-optics-test
     , hedgehog
     , lens
     , memory-optics
+    , mmorph
     , polysemy
     , polysemy-plugin
+    , resourcet
     , type-level-numbers
   default-language: GHC2021
