--- a/stack.yaml
+++ b/stack.yaml
@@ -35,7 +35,8 @@ packages:
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
 #
-# extra-deps:
+extra-deps:
+- polysemy-test-0.3.1.7@sha256:aa081273181b5a943969dd2757a92c973e17c8c4bfcd7cca01132f951f8ab824,4739
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
