--- a/memory-optics.cabal
+++ b/memory-optics.cabal
@@ -62,6 +62,7 @@ library
       GHCForeignImportPrim
       UnliftedFFITypes
       UnboxedTuples
+      MagicHash
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=Polysemy.Plugin
   build-depends:
       base >=4.7 && <5
@@ -97,6 +98,7 @@ test-suite memory-optics-test
       GHCForeignImportPrim
       UnliftedFFITypes
       UnboxedTuples
+      MagicHash
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=Polysemy.Plugin -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
