--- a/memory-optics.cabal
+++ b/memory-optics.cabal
@@ -42,9 +42,7 @@ library
       Data.Memory.Effect
       Data.Memory.Scalars
   other-modules:
-      Paths_memory_optics
-  autogen-modules:
-      Paths_memory_optics
+      Data.Functor.Utils
   hs-source-dirs:
       src
   default-extensions:
@@ -65,7 +63,8 @@ library
       MagicHash
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=Polysemy.Plugin
   build-depends:
-      base >=4.7 && <5
+      barbies
+    , base >=4.7 && <5
     , lens
     , mmorph
     , polysemy
@@ -101,7 +100,8 @@ test-suite memory-optics-test
       MagicHash
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=Polysemy.Plugin -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      barbies
+    , base >=4.7 && <5
     , hedgehog
     , lens
     , memory-optics
