--- a/memory-optics.cabal
+++ b/memory-optics.cabal
@@ -36,6 +36,7 @@ library
       Control.Monad.Distributive
       Control.Monad.Monomial
       Control.Monad.RightModule
+      Data.Functor.Barbie.Utils
       Data.Functor.Identity.Lens
       Data.Memory
       Data.Memory.Abi
@@ -61,6 +62,8 @@ library
       UnliftedFFITypes
       UnboxedTuples
       MagicHash
+      DeriveAnyClass
+      DerivingVia
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=Polysemy.Plugin
   build-depends:
       barbies
@@ -76,6 +79,7 @@ test-suite memory-optics-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Spec.Abi.C
       Spec.Abi.Native
       Paths_memory_optics
   autogen-modules:
@@ -98,6 +102,8 @@ test-suite memory-optics-test
       UnliftedFFITypes
       UnboxedTuples
       MagicHash
+      DeriveAnyClass
+      DerivingVia
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=Polysemy.Plugin -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       barbies
