--- a/package.yaml
+++ b/package.yaml
@@ -37,6 +37,8 @@ default-extensions:
 - UnliftedFFITypes
 - UnboxedTuples
 - MagicHash
+- DeriveAnyClass
+- DerivingVia
 
 dependencies:
 - base >= 4.7 && < 5
