feat: add more C layout tests

--- a/memory-optics.cabal
+++ b/memory-optics.cabal
@@ -65,6 +65,7 @@ library
       MagicHash
       DeriveAnyClass
       DerivingVia
+      DuplicateRecordFields
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=Polysemy.Plugin
   build-depends:
       barbies
@@ -106,6 +107,7 @@ test-suite memory-optics-test
       MagicHash
       DeriveAnyClass
       DerivingVia
+      DuplicateRecordFields
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fplugin=Polysemy.Plugin -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       barbies
